brat/test/golden/kernel/let_del.brat.golden
Error in test/golden/kernel/let_del.brat on line 4:
f = { q => let q' = X(q) in true }
           ^^^^^^^^^^^^^^^^^^^^^

  Type error: Variable(s) q' haven't been used

