brat/test/golden/kernel/let_del.brat
ext "" X :: { Qubit -o Qubit }

f :: { Qubit -o Bool }
f = { q => let q' = X(q) in true }
